--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "plugins": ["@prettier/plugin-ruby"],
+  "plugins": [
+    "@prettier/plugin-ruby"
+  ],
   "rubyStrictMode": true,
   "tabWidth": 2,
   "useTabs": false,
