--- a/test/fixtures/profile_comments.yml
+++ b/test/fixtures/profile_comments.yml
@@ -1,11 +1,4 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  user: one
-  profile: one
-  body: MyText
-
-two:
-  user: two
-  profile: two
+  user: 1
+  profile_user_id: 1
   body: MyText
