--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ vendor/* linguist-vendored
 config/credentials/*.yml.enc diff=rails_credentials
 config/credentials.yml.enc diff=rails_credentials
 
+# Marking specific file types as Ruby for syntax highlighting
 *.erb linguist-language=Ruby
 *.html linguist-language=Ruby
 *.css linguist-language=Ruby
